--- a/PMSCRM/Views/Area/AddArea.cshtml
+++ b/PMSCRM/Views/Area/AddArea.cshtml
@@ -2,6 +2,7 @@
     ViewData["Title"] = "Add Area";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<link rel="stylesheet" href="~/css/buttons.css">
 
 <div class="card shadow-sm p-4 mb-4">
     <h3 class="fw-bold fs-4 mb-3">Areas</h3>
@@ -16,8 +17,6 @@
 
     <textarea name="Description" id="areaDescription" placeholder="Description" class="form-control" maxlength="255" rows="5"></textarea>
 
-    <button type="submit" class="btn btn-primary mt-3">Submit</button>
-
+    <button type="submit" class="btn btn-submit mt-3">Submit</button>
 </form>
-
 </div>
