--- a/PMSCRM/Views/Customer/AddCustomer.cshtml
+++ b/PMSCRM/Views/Customer/AddCustomer.cshtml
@@ -2,8 +2,8 @@
     ViewData["Title"] = "Add Customer";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<link rel="stylesheet" href="~/css/buttons.css">
 
-<h3 class="fw-bold fs-4 mb-3">Customer</h3>
 <div class="card shadow-sm p-4 mb-4">
 <form class="was-validated" asp-controller="Customer" asp-action="AddCustomer" method="post">
 
@@ -49,7 +49,6 @@
         <div class="invalid-feedback">Please fill out this field.</div>
     </div>
 
-    <button type="submit" class="btn btn-primary mt-3">Submit</button>
+    <button type="submit" class="btn btn-submit">Submit</button>
 </form>
-
 </div>
