--- a/PMSCRM/Views/TaskProcessArea/EditTaskProcessArea.cshtml
+++ b/PMSCRM/Views/TaskProcessArea/EditTaskProcessArea.cshtml
@@ -4,35 +4,28 @@
     ViewData["Title"] = "Edit Task Process Area";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<link rel="stylesheet" href="~/css/buttons.css">
 
-<h3 class="fw-bold fs-4 mb-3">Edit Task Process Area</h3>
+<div class="card shadow-sm p-4 mb-4">
+    <form class="was-validated" asp-controller="TaskProcessArea" asp-action="EditTaskProcessArea" method="post">
+        <input type="hidden" asp-for="TaskProcessAreaId" />
 
-<form class="was-validated" asp-controller="TaskProcessArea" asp-action="EditTaskProcessArea" method="post">
-    <input type="hidden" asp-for="TaskProcessAreaId" />
+        <div class="mb-3">
+            <label for="TaskId" class="form-label">Task</label>
+            <select asp-for="TaskId" asp-items="Model.Tasks" class="form-select" required>
+                <option value="">Select a Task</option>
+            </select>
+            <div class="invalid-feedback">Please select a task.</div>
+        </div>
 
-    <div class="mb-3">
-        <label for="TaskId" class="form-label">Task</label>
-        <select asp-for="TaskId" asp-items="Model.Tasks" class="form-select" required>
-            <option value="">Select a Task</option>
-        </select>
-        <div class="invalid-feedback">Please select a task.</div>
-    </div>
-
-    <div class="mb-3">
-        <label for="ProcessId" class="form-label">Process</label>
-        <select asp-for="ProcessId" asp-items="Model.Processes" class="form-select" required>
-            <option value="">Select a Process</option>
-        </select>
-        <div class="invalid-feedback">Please select a process.</div>
-    </div>
-
-@*     <div class="mb-3">
-        <label for="AreaId" class="form-label">Area</label>
-        <select asp-for="AreaId" asp-items="Model.Areas" class="form-select" required>
-            <option value="">Select an Area</option>
-        </select>
-        <div class="invalid-feedback">Please select an area.</div>
-    </div> *@
-
-    <button type="submit" class="btn btn-primary mt-3">Update Task Process Area</button>
-</form>
+        <div class="mb-3">
+            <label for="ProcessId" class="form-label">Process</label>
+            <select asp-for="ProcessId" asp-items="Model.Processes" class="form-select" required>
+                <option value="">Select a Process</option>
+            </select>
+            <div class="invalid-feedback">Please select a process.</div>
+        </div>
+        <button type="submit" class="btn btn-submit">Save Changes</button>
+        <a href="/TaskProcessArea/ViewTaskProcessAreas" class="btn btn-cancel">Cancel</a>
+    </form>
+</div>
