--- a/PMSCRM/Views/TaskProcessAreaUserCustomer/ViewTaskProcessAreaUserCustomerForUser.cshtml
+++ b/PMSCRM/Views/TaskProcessAreaUserCustomer/ViewTaskProcessAreaUserCustomerForUser.cshtml
@@ -1,9 +1,11 @@
 ﻿@using PMSCRM.ViewModels
 @model IEnumerable<TaskProcessAreaUserCustomerDisplayViewModel>
+<link rel="stylesheet" href="~/css/buttons.css">
+<link rel="stylesheet" href="~/css/table.css">
 
 <div class="card shadow-sm p-4 mb-4">
-    <table class="table table-sm table-bordered table-hover">
-        <thead class="table-light">
+    <table class="table-striped table-hover custom-table">
+        <thead>
             <tr>
                 <th class="text-center">Area</th>
                 <th class="text-center">Process</th>
