--- a/PMSCRM/wwwroot/css/sidebar.css
+++ b/PMSCRM/wwwroot/css/sidebar.css
@@ -1,66 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
-html {
-  font-size: 14px;
-}
-
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
-}
-
-.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
-}
-
-html {
-  position: relative;
-  min-height: 100%;
-  height:100vh;
-}
-
-
-
-
-
-::after,
-::before {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-
-a {
-    text-decoration: none;
-}
-
-li {
-    list-style: none;
-}
-
-body {
-    font-family: 'Poppins', sans-serif;
-    height: 100vh;
-}
-
-.wrapper {
-    display: flex;
-    min-height: 100vh;
-    align-items: stretch;
-}
-
-.main {
-    display: flex;
-    flex-direction: column;
-/*    min-height: 100vh;*/
-    width: 100%;
-    overflow: hidden;
-    transition: all 0.35s ease-in-out;
-    background-color: #fff;
-    min-width: 0;
-}
-
-#sidebar {
+﻿#sidebar {
     width: 70px;
     min-width: 70px;
     z-index: 1000;
@@ -68,16 +6,13 @@ body {
     background-color: #B7E0FF;
     display: flex;
     flex-direction: column;
-/*    height: 100vh;*/
     justify-content: space-between;
-/*    min-height: 100vh;*/
-    /*overflow-y: auto;*/
 }
 
-    #sidebar.expand {
-        width: 260px;
-        min-width: 260px;
-    }
+#sidebar.expand {
+    width: 260px;
+    min-width: 260px;
+}
 
 .toggle-btn {
     background-color: transparent;
@@ -86,20 +21,20 @@ body {
     padding: 1rem 1.5rem;
 }
 
-    .toggle-btn i {
-        font-size: 1.5rem;
-        color: #FFF;
-    }
+.toggle-btn i {
+    font-size: 1.5rem;
+    color: #FFF;
+}
 
 .sidebar-logo {
     margin: auto 0;
 }
 
-    .sidebar-logo a {
-        color: #FFF;
-        font-size: 1.15rem;
-        font-weight: 600;
-    }
+.sidebar-logo a {
+    color: #FFF;
+    font-size: 1.15rem;
+    font-weight: 600;
+}
 
 #sidebar:not(.expand) .sidebar-logo,
 #sidebar:not(.expand) a.sidebar-link span {
@@ -188,28 +123,4 @@ a.sidebar-link:hover {
 #sidebar.expand .sidebar-link[data-bs-toggle="collapse"].collapsed::after {
     transform: rotate(45deg);
     transition: all .2s ease-out;
-}
-
-.navbar {
-    background-color: #f5f5f5;
-    box-shadow: 0 0 2rem 0 rgba(33, 37, 41, .1);
-}
-
-.navbar-expand .navbar-collapse {
-    min-width: 200px;
-}
-
-.btn-custom {
-    background-color: #B7E0FF;
-    border: none;
-    color: #000; /* Optional: Adjust text color to improve contrast */
-}
-
-    .btn-custom:hover {
-        background-color: #a0d4f5; /* Slightly darker shade for hover effect */
-    }
-
-
-@media (min-width: 768px) {
-
 }
