--- a/PMSCRM/Views/Results/Index.cshtml
+++ b/PMSCRM/Views/Results/Index.cshtml
@@ -30,7 +30,7 @@
                                 <span>▲</span> <!-- Default arrow for ascending -->
                             }
                     </a>
-                        @* <button type="submit" name="sortBy" value="Name" class="btn btn-link">
+                       @*  <button type="submit" name="sortBy" value="Name" class="btn btn-link">
                             Area Name
                             @if (ViewBag.CurrentSort == "Name")
                             {
@@ -194,7 +194,7 @@ else
     <p>No results found.</p>
 }
 
-<a asp-action="Index" class="btn btn-success">New Search</a>
+@* <a asp-action="Index" class="btn btn-success">New Search</a> *@
 
 <script>
     $(function () {
